tdf#149503: Check size of vectors

Crash introduced by 41f95c4a35a6335e9edb2f51c11d136d88bd0749
"Remove SC_DPOUT_MAXLEVELS limit in Pivot"

This brings back the old behaviour and now the
"You cannot change this part of the pivot table." message
is displayed again

Change-Id: Ibad84c0a279d7d67b709b7e311ac875739cdb210
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135578
Tested-by: Eike Rathke <erack@redhat.com>
Reviewed-by: Eike Rathke <erack@redhat.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>